<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>esthesis</groupId>
  <artifactId>esthesis-bom</artifactId>
  <version>1.0.21</version>
  <packaging>pom</packaging>

  <properties>
    <!-- MAVEN -->
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <compiler-plugin.version>3.13.0</compiler-plugin.version>
    <maven.compiler.release>21</maven.compiler.release>
    <surefire-plugin.version>3.3.1</surefire-plugin.version>
    <failsafe-plugin.version>3.3.1</failsafe-plugin.version>
    <git-commit-id-maven-plugin.version>5.0.0</git-commit-id-maven-plugin.version>
    <skipITs>true</skipITs>

    <!-- QUARKUS -->
    <quarkus.platform.version>3.11.1</quarkus.platform.version>

    <!-- THIRD-PARTY -->
    <org.projectlombok.version>1.18.34</org.projectlombok.version>
    <org.apache.commons.version>3.14.0</org.apache.commons.version>
    <instancio-junit>2.16.1</instancio-junit>
    <jackson-antpathfilter.version>1.0.2</jackson-antpathfilter.version>
    <slugify.version>3.0.2</slugify.version>
    <awaitility.version>4.2.0</awaitility.version>
    <zeebe.version>1.3.0</zeebe.version>
    <semver4j.version>5.3.0</semver4j.version>
    <influxdb-client-java.version>7.1.0</influxdb-client-java.version>
    <flux-dsl.version>7.1.0</flux-dsl.version>
    <org.eclipse.paho.client.mqttv3.version>1.2.5</org.eclipse.paho.client.mqttv3.version>
    <testcontainers.version>1.20.0</testcontainers.version>
    <resilience4j-ratelimiter.version>2.1.0</resilience4j-ratelimiter.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- DEV & BUILD -->
      <dependency>
        <groupId>io.quarkus.platform</groupId>
        <artifactId>quarkus-bom</artifactId>
        <scope>import</scope>
        <type>pom</type>
        <version>${quarkus.platform.version}</version>
      </dependency>
      <dependency>
        <groupId>io.quarkus.platform</groupId>
        <artifactId>quarkus-camel-bom</artifactId>
        <scope>import</scope>
        <type>pom</type>
        <version>${quarkus.platform.version}</version>
      </dependency>
      <dependency>
        <groupId>org.semver4j</groupId>
        <artifactId>semver4j</artifactId>
        <version>${semver4j.version}</version>
      </dependency>
      <dependency>
        <groupId>io.quarkiverse.zeebe</groupId>
        <artifactId>quarkus-zeebe</artifactId>
        <version>${zeebe.version}</version>
      </dependency>
      <dependency>
        <groupId>org.awaitility</groupId>
        <artifactId>awaitility</artifactId>
        <version>${awaitility.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.slugify</groupId>
        <artifactId>slugify</artifactId>
        <version>${slugify.version}</version>
      </dependency>
      <dependency>
        <artifactId>lombok</artifactId>
        <groupId>org.projectlombok</groupId>
        <version>${org.projectlombok.version}</version>
      </dependency>
      <dependency>
        <artifactId>commons-lang3</artifactId>
        <groupId>org.apache.commons</groupId>
        <version>${org.apache.commons.version}</version>
      </dependency>
      <dependency>
        <artifactId>jackson-antpathfilter</artifactId>
        <groupId>ch.mfrey.jackson</groupId>
        <version>${jackson-antpathfilter.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.paho</groupId>
        <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
        <version>${org.eclipse.paho.client.mqttv3.version}</version>
      </dependency>
      <dependency>
        <groupId>com.influxdb</groupId>
        <artifactId>influxdb-client-java</artifactId>
        <version>${influxdb-client-java.version}</version>
      </dependency>

      <!-- TESTING -->
      <dependency>
        <groupId>io.quarkus</groupId>
        <artifactId>quarkus-junit5</artifactId>
        <version>${quarkus.platform.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>io.quarkus</groupId>
        <artifactId>quarkus-junit5-mockito</artifactId>
        <version>${quarkus.platform.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.instancio</groupId>
        <artifactId>instancio-junit</artifactId>
        <version>${instancio-junit}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.testcontainers</groupId>
        <artifactId>hivemq</artifactId>
        <version>${testcontainers.version}</version>
        <scope>test</scope>
      </dependency><dependency>
        <groupId>org.testcontainers</groupId>
        <artifactId>influxdb</artifactId>
        <version>${testcontainers.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>io.github.resilience4j</groupId>
        <artifactId>resilience4j-ratelimiter</artifactId>
        <version>${resilience4j-ratelimiter.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>io.quarkus.platform</groupId>
          <artifactId>quarkus-maven-plugin</artifactId>
          <version>${quarkus.platform.version}</version>
          <extensions>true</extensions>
          <configuration>
            <source>${maven.compiler.source}</source>
            <target>${maven.compiler.target}</target>
            <compilerArgs>
              <arg>--enable-preview</arg>
            </compilerArgs>
            <jvmArgs>--enable-preview</jvmArgs>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>build</goal>
                <goal>generate-code</goal>
                <goal>generate-code-tests</goal>
                <!-- TODO: enable once Quarkus is updated -->
                <!--                <goal>native-image-agent</goal>-->
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${compiler-plugin.version}</version>
          <configuration>
            <parameters>true</parameters>
            <compilerArgument>-proc:full</compilerArgument>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${surefire-plugin.version}</version>
          <configuration>
            <argLine>-XX:+EnableDynamicAgentLoading</argLine>
            <systemPropertyVariables>
              <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
              <maven.home>${maven.home}</maven.home>
              <quarkus.log.category.esthesis.level>DEBUG</quarkus.log.category.esthesis.level>
            </systemPropertyVariables>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>${failsafe-plugin.version}</version>
          <executions>
            <execution>
              <goals>
                <goal>integration-test</goal>
                <goal>verify</goal>
              </goals>
            </execution>
          </executions>
          <configuration>
            <systemPropertyVariables>
              <native.image.path>${project.build.directory}/${project.build.finalName}-runner
              </native.image.path>
              <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
              <maven.home>${maven.home}</maven.home>
            </systemPropertyVariables>
          </configuration>
        </plugin>
        <plugin>
          <groupId>io.github.git-commit-id</groupId>
          <artifactId>git-commit-id-maven-plugin</artifactId>
          <version>${git-commit-id-maven-plugin.version}</version>
          <configuration>
            <commitIdGenerationMode>full</commitIdGenerationMode>
            <generateGitPropertiesFile>true</generateGitPropertiesFile>
            <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties
            </generateGitPropertiesFilename>
            <includeOnlyProperties>
              <includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
              <includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>
            </includeOnlyProperties>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>revision</goal>
              </goals>
              <id>get-git-info</id>
              <phase>initialize</phase>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
